update a picture section

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <button class="btn2">Learn More</button>
         </div>
         <div>
-          <img src="/assets/Layer_1.png" alt="">
+          <img src="./assets/Layer_1.png" alt="">
         </div>
       </div>
 
       <div>
         <div class="layer-1">
           <div>
-            <img src="/assets/Group 3.png" alt="">
+            <img src="./assets/Group 3.png" alt="">
           </div>
           <div >
             <h1>I will help People by <br> bcreating Modern Web System</h1>
@@ -71,7 +71,7 @@
               <button class="btn2">Learn More</button>
             </div>
             <div>
-              <img src="/assets/Group 4.png" alt="">
+              <img src="./assets/Group 4.png" alt="">
             </div>
            
           </div>
@@ -101,7 +101,7 @@
         <div class="card">
           
             <div class="card1">
-            <img src="/assets/html.png" alt="">
+            <img src="./assets/html.png" alt="">
             <h1>
               HTML
             </h1>
@@ -109,7 +109,7 @@
             <button class="btn2">Learn more</button>
             </div>
             <div class="card2">
-              <img src="/assets/css.png" alt="">
+              <img src="./assets/css.png" alt="">
               <h1>
                 CSS
               </h1>
@@ -117,7 +117,7 @@
               <button class="btn2">Learn more</button>
             </div>
             <div class="card3">
-              <img src="/assets/js.png" alt="">
+              <img src="./assets/js.png" alt="">
               <h1>
                 JS
               </h1>
@@ -139,7 +139,7 @@
 
         <div class="react">
           <div > 
-            <img src="/assets/react.png" alt="">
+            <img src="./assets/react.png" alt="">
           </div>
           <div>
             <h1>ReactJS</h1>
@@ -149,7 +149,7 @@
         </div>
         <div class="node">
           <div > 
-            <img src="/assets/nodejs.png" alt="">
+            <img src="./assets/nodejs.png" alt="">
           </div>
           <div>
             <h1>Nodejs</h1>
@@ -161,7 +161,7 @@
         </div>
         <div class="mongobd">
           <div > 
-            <img src="/assets/mongodb.png" alt="">
+            <img src="./assets/mongodb.png" alt="">
           </div>
           <div>
             <h1>Mondgobd</h1>
@@ -190,9 +190,9 @@
         <h2>An Open Commitment by Awlad Hossain</h2>
       </div>
       <div>
-        <img src="/assets/facebook.png" alt="">
-        <img src="/assets/github.png" alt="">
-        <img src="/assets/linkedin-icon 1.png" alt="">
+        <img src="./assets/facebook.png" alt="">
+        <img src="./assets/github.png" alt="">
+        <img src="./assets/linkedin-icon 1.png" alt="">
       </div>
     </div>
   </footer>
